--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -9,12 +9,16 @@
     = favicon_link_tag asset_path('favicon.png')
     = csrf_meta_tags
     = csp_meta_tag
-    %link{:href => "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css", :rel => "stylesheet"}/
-    %link{:href => "https://cdn.jsdelivr.net/npm/@tabler/core@latest/dist/css/tabler.min.css", :rel => "stylesheet"}/
-    %link{:href => "https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css", :rel => "stylesheet"}/
-    %link{:href => "https://npmcdn.com/flatpickr/dist/themes/dark.css", :rel => "stylesheet", :type => "text/css"}/
+    %link{:href => "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css", :rel => "stylesheet"}
+    %link{:href => "https://cdn.jsdelivr.net/npm/@tabler/core@latest/dist/css/tabler.min.css", :rel => "stylesheet"}
+    %link{:href => "https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css", :rel => "stylesheet"}
+    %link{:href => "https://npmcdn.com/flatpickr/dist/themes/dark.css", :rel => "stylesheet", :type => "text/css"}
     %script{:src => "https://cdn.jsdelivr.net/npm/@tabler/core@latest/dist/js/tabler.min.js"}
     %script{:src => "https://cdn.jsdelivr.net/npm/flatpickr"}
+
+    %script{:src => "https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"}
+    %script{:src => "https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"}
+
     = stylesheet_link_tag "admin", "data-turbo-track": "reload"
     -#= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload"
     = javascript_include_tag "admin", "data-turbo-track": "reload", defer: true, type: "module"
