--- a/app/views/admin/admin_users/_show_content.html.haml
+++ b/app/views/admin/admin_users/_show_content.html.haml
@@ -14,6 +14,12 @@
   .list-group-item
     .row
       .col-md-3
+        .text-muted.fw-bold= admin_user.class.human_attribute_name(:role)
+      .col-md-9
+        = admin_user.role_i18n
+  .list-group-item
+    .row
+      .col-md-3
         .text-muted.fw-bold= admin_user.class.human_attribute_name(:created_at)
       .col-md-9
         = admin_user.created_at
