--- a/app/views/admin/admin_users/index.html.haml
+++ b/app/views/admin/admin_users/index.html.haml
@@ -30,6 +30,7 @@
               %th.icon_cell
               %th= render Admin::SortableComponent.new(@search, :email, label: Admin::AdminUser.human_attribute_name(:email))
               %th= render Admin::SortableComponent.new(@search, :name, label: Admin::AdminUser.human_attribute_name(:name))
+              %th= render Admin::SortableComponent.new(@search, :role, label: Admin::AdminUser.human_attribute_name(:role))
               %th.icon_cell
           %tbody#admin_users
             = render partial: "index_row", collection: @admin_users, as: 'admin_user'
