--- a/app/views/admin/dashboard/index.html.haml
+++ b/app/views/admin/dashboard/index.html.haml
@@ -60,6 +60,6 @@
         = line_chart Order.group_by_day(:updated_at).count, title: "", width: "100%", height: "200px", class: "d-flex px-2", colors: ["#ae3ec9"]
 
 %div{class: "row"}
-  %div{class: "col-12 col-md-4 bg-info"} 1
-  %div{class: "col-12 col-md-4 bg-purple"} 2
-  %div{class: "col-12 col-md-4 bg-warning"} 3
+  %div{class: "col-12 col-md-4 bg-info"} &nbsp
+  %div{class: "col-12 col-md-4 bg-purple"} &nbsp
+  %div{class: "col-12 col-md-4 bg-warning"} &nbsp
