--- a/app/views/admin/landing_messages/_index_row.html.haml
+++ b/app/views/admin/landing_messages/_index_row.html.haml
@@ -1,5 +1,5 @@
-%tr{ id: dom_id(landing_message) }
-  %td.icon_cell
+%tr{ class: "", id: dom_id(landing_message) }
+  %td{class: "icon_cell"}
     = link_to admin_landing_message_path(landing_message), class: 'd-block', data: { turbo_frame: 'modal_main' } do
       %i.bi.bi-file-text.h3
   %td
@@ -12,6 +12,6 @@
     = landing_message.phone
   %td{class: "text-center"}
     = render Admin::BadgeComponent.new(landing_message.status_i18n, landing_message.status_color)
-  %td.icon_cell
+  %td{class: "icon_cell"}
     = link_to edit_admin_landing_message_path(landing_message), class: 'd-block', data: { turbo_frame: "modal_main" } do
       %i.bi.bi-pencil-square.h3
