--- a/app/views/admin/admin_users/_show_content.html.haml
+++ b/app/views/admin/admin_users/_show_content.html.haml
@@ -20,12 +20,7 @@
   .list-group-item
     .row
       .col-md-3
-        .text-muted.fw-bold= admin_user.class.human_attribute_name(:created_at)
+        .text-muted.fw-bold Заработано
       .col-md-9
-        = admin_user.created_at
-  .list-group-item
-    .row
-      .col-md-3
-        .text-muted.fw-bold= admin_user.class.human_attribute_name(:updated_at)
-      .col-md-9
-        = admin_user.updated_at
+        -#= Order.where(admin_user: admin_user.id).where(created_at: Date.today.at_beginning_of_month..Date.tomorrow).pluck(:price).sum
+        = admin_user.month_salary(admin_user)
