--- a/app/views/admin/landing_messages/_form.html.haml
+++ b/app/views/admin/landing_messages/_form.html.haml
@@ -1,11 +1,11 @@
-.list-group.mb-2
-  .list-group-item
+%div{class: "list-group"}
+  %div{class: "list-group-item"}
     = render Admin::FieldsetComponent.new(form, :name, :text, required: true)
-  .list-group-item
+  %div{class: "list-group-item"}
     = render Admin::FieldsetComponent.new(form, :phone, :text, required: true)
-  .list-group-item
+  %div{class: "list-group-item"}
     = render Admin::FieldsetComponent.new(form, :email, :email)
-  .list-group-item
+  %div{class: "list-group-item"}
     = render Admin::FieldsetComponent.new(form, :message, :text, required: true)
-  .list-group-item
+  %div{class: "list-group-item"}
     = render Admin::FieldsetComponent.new(form, :status, :radio, list: Admin::LandingMessage.statuses_i18n.invert)
