--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -41,8 +41,9 @@
             %div{id: "navbar-menu", class: "collapse navbar-collapse"}
               = render 'admin/common/header_menu'
               %ul.navbar-nav.ms-auto.mb-2.mb-lg-0
-                %li.nav-item
-                  = link_to 'Користувачі', admin_admin_users_path, class: 'nav-link fs-3'
+                - if current_admin_user.has_role?(0)
+                  %li.nav-item
+                    = link_to 'Користувачі', admin_admin_users_path, class: 'nav-link fs-3'
                 %li.nav-item.dropdown
                   %a.nav-link.dropdown-toggle#header_current_user{ role: :button, data: { bs_toggle: :dropdown } }
                     = current_admin_user.email
