--- a/app/views/landing/_3_services.html.haml
+++ b/app/views/landing/_3_services.html.haml
@@ -7,21 +7,21 @@
     %div{class: "p-6 shadow-md"}
       %div{class: "hidden md:block"}
         = image_tag("niz.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
-      %h1.mx-auto.mb-4.text-xl.font-semibold.leading-none.tracking-tighter.text-neutral-600.lg:text-2xl
+      %h1{class: "mx-auto mb-4 text-xl font-semibold leading-none tracking-tighter text-neutral-600 lg:text-2xl"}
         Підгін низу (джинси, сукні, пальто та інші речі)
-      -#%p.mx-auto.text-base.leading-relaxed.text-gray-500
+      -#%p{class: "mx-auto text-base leading-relaxed text-gray-500"}
         Підгін низу (джинси, сукні, пальто та інші речі)
     %div{class: "p-6 shadow-md"}
       %div{class: "hidden md:block"}
         = image_tag("melkiy.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
-      %h1.mx-auto.mb-4.text-xl.font-semibold.leading-none.tracking-tighter.text-neutral-600.lg:text-2xl
+      %h1{class: "mx-auto mb-4 text-xl font-semibold leading-none tracking-tighter text-neutral-600 lg:text-2xl"}
         Дрібний ремонт одягу
-      -#%p.mx-auto.text-base.leading-relaxed.text-gray-500
+      -#%p{class: "mx-auto text-base leading-relaxed text-gray-500"}
       -#  Дрібний ремонт одягу
     %div{class: "p-6 shadow-md"}
       %div{class: "hidden md:block"}
         = image_tag("shtory.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
-      %h1.mx-auto.mb-4.text-xl.font-semibold.leading-none.tracking-tighter.text-neutral-600.lg:text-2xl
+      %h1{class: "mx-auto mb-4 text-xl font-semibold leading-none tracking-tighter text-neutral-600 lg:text-2xl"}
         Підшивання штор
-      -#%p.mx-auto.text-base.leading-relaxed.text-gray-500
+      -#%p{class: "mx-auto text-base leading-relaxed text-gray-500"}
         Підшивання штор
