--- a/app/views/landing/_4_about.html.haml
+++ b/app/views/landing/_4_about.html.haml
@@ -1,43 +1,44 @@
-%section.font-messiri
-  .py-12.bg-stone-100
-    .max-w-7xl.mx-auto.px-4.sm:px-6.lg:px-8
-      .lg:text-center
-        %h2.font-heading.mb-4.bg-orange-100.text-orange-800.px-4.py-2.rounded-lg.md:w-64.md:mx-auto.text-xs.font-semibold.tracking-widest.text-black.uppercase.title-font
-          Чому на довіряють?
-        %p.font-heading.mt-2.text-3xl.leading-8.font-semibold.tracking-tight.text-red-600.sm:text-4xl
+%section{class: "font-messiri"}
+  %div{class: "py-12 bg-stone-100"}
+    %div{class: "max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"}
+      %div{class: "lg:text-center"}
+        %h2{class: "font-heading mb-4 bg-orange-100 text-orange-800 px-4 py-2 rounded-lg md:w-64 md:mx-auto text-xs font-semibold tracking-widest text-black uppercase title-font"}
+          Чому нам довіряють?
+        %p{class: "font-heading mt-2 text-3xl leading-8 font-semibold tracking-tight text-red-600 sm:text-4xl"}
           Багаторічний досвід та бездоганна репутація.
-        %p.mt-4.max-w-2xl.text-lg.text-gray-500.lg:mx-auto
+        %p{class: "mt-4 max-w-2xl text-lg text-gray-500 lg:mx-auto"}
           Ми уважно вислухаємо кожного клієнта, порадимо найкраще рішення, якісно та швидко виконаємо замовлення.
-      .mt-10
-        %dl.space-y-10.md:space-y-0.md:grid.md:grid-cols-2.md:gap-x-8.md:gap-y-10
-          .relative
+      %div{class: "mt-10"}
+        %dl{class: "space-y-10 md:space-y-0 md:grid md:grid-cols-2 md:gap-x-8 md:gap-y-10"}
+          %div{class: "relative"}
             %dt
-              .absolute.flex.items-center.justify-center.h-12.w-12.rounded-md.bg-primary-500.text-white
+              %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
                 = image_tag "mashine.svg"
-              %p.font-heading.ml-16.text-lg.leading-6.font-bold.text-gray-700 Нове сучасне обладнання
-            %dd.mt-2.ml-16.text-base.text-gray-500
+              %p{class: "font-heading ml-16 text-lg leading-6 font-bold text-gray-700"}
+                Нове сучасне обладнання
+            %dd{class: "mt-2 ml-16 text-base text-gray-500"}
               Ми використовуємо найновіше обладнання, завдяки якому якість робіт завжди на виокому рівні.
-          .relative
+          %div{class: "relative"}
             %dt
-              .absolute.flex.items-center.justify-center.h-12.w-12.rounded-md.bg-primary-500.text-white
+              %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
                 = image_tag "button.svg"
-              %p.font-heading.ml-16.text-lg.leading-6.font-bold.text-gray-700
+              %p{class: "font-heading ml-16 text-lg leading-6 font-bold text-gray-700"}
                 Дипломовані майстри
-            %dd.mt-2.ml-16.text-base.text-gray-500
+            %dd{class: "mt-2 ml-16 text-base text-gray-500"}
               Всі наші майстри мають профільну освіту, та володіють сучасними технологіями ремонту одягу та крою.
-          .relative
+          %div{class: "relative"}
             %dt
-              .absolute.flex.items-center.justify-center.h-12.w-12.rounded-md.bg-primary-500.text-white
+              %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
                 = image_tag "model.svg"
-              %p.font-heading.ml-16.text-lg.leading-6.font-bold.text-gray-700
+              %p{class: "font-heading ml-16 text-lg leading-6 font-bold text-gray-700"}
                 Гнучкі ціни
-            %dd.mt-2.ml-16.text-base.text-gray-500
+            %dd{class: "mt-2 ml-16 text-base text-gray-500"}
               Наші ціні вас приємно здивують. Для кожного знайдемо найприйнятніше рішення.
-          .relative
+          %div{class: "relative"}
             %dt
-              .absolute.flex.items-center.justify-center.h-12.w-12.rounded-md.bg-primary-500.text-white
+              %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
                 = image_tag "spool.svg"
-              %p.font-heading.ml-16.text-lg.leading-6.font-bold.text-gray-700
+              %p{class: "font-heading ml-16 text-lg leading-6 font-bold text-gray-700"}
                 Гарантія якості
-            %dd.mt-2.ml-16.text-base.text-gray-500
+            %dd{class: "mt-2 ml-16 text-base text-gray-500"}
               Ми гарантуємо якісне та швидке обслуговування.
