--- a/app/views/landing/_contact_form.html.haml
+++ b/app/views/landing/_contact_form.html.haml
@@ -11,15 +11,15 @@
       = form_for [@landing_message, LandingMessage.new], remote: false do |f|
         = hidden_field_tag :format, :html
         %div{class: "mb-4"}
-          %label.block.text-gray-700.text-sm.font-bold.mb-2{:for => "name"} Імʼя
+          %label{class: "block text-gray-700 text-sm font-bold mb-2", for: "name"} Імʼя
           = f.text_field :name, required: true, class: "w-full p-2 border rounded-md focus:outline-none focus:border-blue-500", id: "name"
         %div{class: "mb-4"}
-          %label.block.text-gray-700.text-sm.font-bold.mb-2{:for => "phone"} Телефон
+          %label{class: "block text-gray-700 text-sm font-bold mb-2", for: "phone"} Телефон
           = f.telephone_field :phone, required: true, class: 'w-full p-2 border rounded-md focus:outline-none focus:border-blue-500', id: 'phone'
         %div{class: "mb-4"}
-          %label.block.text-gray-700.text-sm.font-bold.mb-2{:for => "email"} E-mail
+          %label{class: "block text-gray-700 text-sm font-bold mb-2", for: "email"} E-mail
           = f.email_field :email, required: true, class: 'w-full p-2 border rounded-md focus:outline-none focus:border-blue-500', id: 'email'
         %div{class: "mb-4"}
-          %label.block.text-gray-700.text-sm.font-bold.mb-2{:for => "message"} Ваше повідомлення
+          %label{class: "block text-gray-700 text-sm font-bold mb-2", for: "message"} Ваше повідомлення
           = f.text_area :message, required: true, size: "70x2", class: 'w-full p-2 border rounded-md focus:outline-none focus:border-blue-500', id: 'message'
         = f.submit 'Відправити', data: { disable_with: false }, class: "cursor-pointer font-messiri inline-block w-1/3 rx-auto text-center text-xl font-medium text-red-600 bg-stone-100 hover:bg-stone-200 border border-red-600 rounded-lg font-bold py-2 px-4", type: "submit"
