--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -146,7 +146,10 @@ th.required:after {
 .modal-header,
 .modal-body,
 .modal-footer {
-    padding: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: .25rem;
+    padding-bottom: .25rem;
 }
 
 .modal-backdrop.show {
@@ -173,6 +176,8 @@ th.required:after {
 .remote_modal .modal-body .list-group-item,
 .remote_modal .modal-body table tbody {
     background-color: #fff;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
 }
 .remote_modal .modal-body .list-group-item:hover {
     background-color: #F2F3F4;
@@ -180,6 +185,10 @@ th.required:after {
 
 .modal_main {
     max-width: 75%;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: .25rem;
+    padding-bottom: .25rem;
 }
 @media (max-width: 991px) {
     .modal_main {
