--- a/app/views/admin/common/_header_menu.html.haml
+++ b/app/views/admin/common/_header_menu.html.haml
@@ -1,9 +1,5 @@
-%ul.navbar-nav.me-auto.mb-2.mb-lg-0
+%ul.navbar-nav.me-auto.mb-0
   %li.nav-item
     = link_to 'Повідомлення', admin_landing_messages_path, class: 'nav-link fs-3'
-  %li.nav-item
-    = link_to 'Замовники', admin_customers_path, class: 'nav-link fs-3'
-  %li.nav-item
-    = link_to 'Послуги', admin_services_path, class: 'nav-link fs-3'
   %li.nav-item
     = link_to 'Замовлення', admin_orders_path, class: 'nav-link fs-3'
