--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -1,3 +1,17 @@
+%div{id: "warning", class: "flex items-center w-full p-4 text-gray-500 bg-red-100 rounded-lg shadow", role: "alert"}
+  %div{class: "inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-orange-500 bg-orange-100 rounded-lg"}
+    %i{class: "fa-solid fa-triangle-exclamation"}
+  %div{class: "ms-auto text-md font-normal text-center"}
+    У зв'язку з відключенням електроенергії, графік роботи може бути змінений. У разі винекнення питань телефонуйте:
+    %span{class: "px-[5px] text-gray-900 whitespace-nowrap"}
+      %i{class: "fa-solid fa-phone"}
+      %a{href: "tel:+380972870571"}+38 097 287 05 71
+    %br
+    Просимо вибачення за незручності.
+  %button{class: "ms-auto bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 -mx-1.5 -my-1.5 p-1.5", "aria-label": "Close", "data-dismiss-target": "#warning", type: "button"}
+    %span.sr-only Close
+    %i{class: "fa-solid fa-xmark"}
+
 %div{class: "", id: ""}
   
   -# Modal dialog contact form
