--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -2,7 +2,7 @@
   %div{class: "inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-orange-500 bg-orange-100 rounded-lg"}
     %i{class: "fa-solid fa-triangle-exclamation"}
   %div{class: "ms-auto text-md font-normal text-center"}
-    У зв'язку з відключенням електроенергії, графік роботи може бути змінений. У разі винекнення питань телефонуйте:
+    У зв'язку з відключенням електроенергії, графік роботи може бути змінений. У разі виникнення питань телефонуйте:
     %span{class: "px-[5px] text-gray-900 whitespace-nowrap"}
       %i{class: "fa-solid fa-phone"}
       %a{href: "tel:+380972870571"}+38 097 287 05 71
