--- a/app/views/admin/admin_users/registrations/edit.html.haml
+++ b/app/views/admin/admin_users/registrations/edit.html.haml
@@ -1,16 +1,23 @@
-.page{ style: 'padding-top: 5rem' }
-  .container-tight
+%div{class: "page", style: "padding-top: 5rem" }
+  %div{class: "container-tight"}
     = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |form|
-      .card
-        .card-header
-          %h3.mb-0.text-center Edit my account
-        .card-body{ data: {controller: "modal-form" } }
-          .row.gy-3
-            .col-12
+      %div{class: "card"}
+        %div{class: "card-header"}
+          %h3{class: "mb-0 text-center"} Редагувати мій аккаунт
+        %div{class: "card-body", data: {controller: "modal-form" } }
+          %div{class: "row gy-3"}
+            %div{class: "col-12"}
+              = form.label :name, 'Імʼя', class: 'form-label'
+              = form.text_field :name, class: 'form-control'
+            - if current_admin_user.has_role?(0)
+              %div{class: "col-12"}
+                = form.label :role, 'Роль', class: 'form-label'
+                = form.select :role, [["Admin", 0], ["Manager", 1]], {}, {class: "form-select form-select"}
+            %div{class: "col-12"}
               = form.label :email, 'Email', class: 'form-label'
               = form.email_field :email, class: 'form-control'
-            .col-12
+            %div{class: "col-12"}
               = form.label :password, 'Password', class: 'form-label'
               = form.password_field :password, class: 'form-control', placeholder: 'Enter only when changing password', autocomplete: 'new-password'
-        .card-footer.text-end
+        %div{class: "card-footer text-end"}
           = form.submit t('infold.operation.update'), class: 'btn btn-primary'
