Add articles. Some fix and issues

--- a/app/views/admin/common/_header_menu.html.haml
+++ b/app/views/admin/common/_header_menu.html.haml
@@ -1,4 +1,6 @@
 %ul.navbar-nav.me-auto.mb-0
+  %li{class: "nav-item"}
+    = link_to 'Дашборд', admin_root_path, class: "nav-link fs-3"
   %li.nav-item
     = link_to 'Повідомлення', admin_landing_messages_path, class: 'nav-link fs-3'
   %li.nav-item
