--- a/app/views/admin/services/_show_content.html.haml
+++ b/app/views/admin/services/_show_content.html.haml
@@ -22,4 +22,7 @@
               = image_tag(service.photo, class: 'img-fluid')
             - else
               = service.photo.filename
-
+  .list-group-item
+    - service.articles.each do |article|
+      = article.title
+      = article.created_at.strftime("%d-%m-%Y %H:%M")
