--- a/app/views/landing/_2_services.html.haml
+++ b/app/views/landing/_2_services.html.haml
@@ -3,27 +3,37 @@
     %h1{class: "text-3xl py-2 font-messiri text-center font-bold tracking-tight font-medium text-red-600"}
       Більше 15 років досвіду роботи. Понад 5000 задоволених клієнтів.
   %div{class: "grid w-full grid-cols-1 gap-6 mx-auto md:grid-cols-3"}
-    %div{class: "p-6 shadow-md"}
+    %div{class: "flex flex-col p-6 shadow-md cursor-pointer hover:shadow-lg hover:shadow-red-300"}
       %div{class: "hidden md:block"}
         = image_tag("zip.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
-      %h1.mx-auto.mb-4.text-xl.font-semibold.leading-none.tracking-tighter.text-neutral-600.lg:text-2xl
+      %h1{class: "grow mx-auto mb-4 text-xl font-semibold leading-none tracking-tighter text-neutral-600 lg:text-2xl"}
         Заміна замків у верхньому та легкому одягу
       -#%p.mx-auto.text-base.leading-relaxed.text-gray-500
       -#  Якщо у вас вийшов з ладу замок, це не означає, що речі вийшла з ладу та її потрібно викинути.
       -#  Ми проведемо швидку його заміну, і ваш виріб прослужить ще не один день.
-    %div{class: "p-6 shadow-md"}
+      %div{class: "text-red-600 w-full flex justify-end items-end"}
+        %div{class: "pe-1 md:pe-2 w-full sm:w-2/3 border-t-2 border-red-300 text-end"}
+          Докладніше
+    %div{class: "flex flex-col p-6 shadow-md cursor-pointer hover:shadow-lg hover:shadow-red-300"}
       %div{class: "hidden md:block"}
         = image_tag("djeans.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
-      %h1.mx-auto.mb-4.text-xl.font-semibold.leading-none.tracking-tighter.text-neutral-600.lg:text-2xl
+      %h1{class: "grow mx-auto mb-4 text-xl font-semibold leading-none tracking-tighter text-neutral-600 lg:text-2xl"}
         Штопка (штуковка джинсових виробів)
       -#%p.mx-auto.text-base.leading-relaxed.text-gray-500
       -#  штуковка
-    %div{class: "p-6 shadow-md"}
+      %div{class: "text-red-600 w-full flex justify-end items-end"}
+        %div{class: "pe-1 md:pe-2 w-full sm:w-2/3 border-t-2 border-red-300 text-end"}
+          Докладніше
+    %div{class: "flex flex-col p-6 shadow-md cursor-pointer hover:shadow-lg hover:shadow-red-300"}
       %div{class: "hidden md:block"}
         = image_tag("skin.png", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
-      %h1.mx-auto.mb-4.text-xl.font-semibold.leading-none.tracking-tighter.text-neutral-600.lg:text-2xl
+      %h1{class: "grow mx-auto mb-4 text-xl font-semibold leading-none tracking-tighter text-neutral-600 lg:text-2xl"}
         Ремонт шкіряних та хутрових виробів
       -#%p.mx-auto.text-base.leading-relaxed.text-gray-500
       -#  Ремонт шкіряних та хутрових виробів
+      %div{class: "text-red-600 w-full flex justify-end items-end"}
+        %div{class: "pe-1 md:pe-2 w-full sm:w-2/3 border-t-2 border-red-300 text-end"}
+          Докладніше
+
 
 
