--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -1,3 +1,6 @@
+-#= video_tag("test.mp4", size: "640", autoplay: :autoplay, loop: :loop, controls: true, html: {class: "border-4"})
+-#%button{onclick: "setGtag()", class: "hidden"} Yes
+
 %div{id: "warning", class: "flex items-center w-full p-4 text-gray-500 bg-red-100 rounded-lg shadow", role: "alert"}
   %div{class: "inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-orange-500 bg-orange-100 rounded-lg"}
     %i{class: "fa-solid fa-triangle-exclamation"}
