--- a/app/components/admin/fieldset_component.html.haml
+++ b/app/components/admin/fieldset_component.html.haml
@@ -2,7 +2,7 @@
   - if label_rendering?
     %div{ class: "#{'col-md-3' if alignment?}"}
       = render Admin::LabelComponent.new(@form, @field, label: @label, required: @required)
-  %div{ class: "#{'col-md-9 col-xl-6' if alignment?}" }
+  %div{ class: "#{'col-12' if alignment?}" }
     - if input_group?
       = render Admin::InputGroupComponent.new(append: @append, prepend: @prepend) do
         = render form_field
