--- a/app/views/landing/_contact_form.html.haml
+++ b/app/views/landing/_contact_form.html.haml
@@ -22,4 +22,4 @@
         %div{class: "mb-4"}
           %label{class: "block text-gray-700 text-sm font-bold mb-2", for: "message"} Ваше повідомлення
           = f.text_area :message, required: true, size: "70x2", class: 'w-full p-2 border rounded-md focus:outline-none focus:border-blue-500', id: 'message'
-        = f.submit 'Відправити', data: { disable_with: false }, class: "cursor-pointer font-messiri inline-block w-1/3 rx-auto text-center text-xl font-medium text-red-600 bg-stone-100 hover:bg-stone-200 border border-red-600 rounded-lg font-bold py-2 px-4", type: "submit"
+        = f.submit 'Відправити', data: { disable_with: false }, class: "cursor-pointer font-messiri inline-block w-full md:w-1/2 flex ms-auto text-center text-xl font-medium text-red-600 bg-stone-100 hover:bg-stone-200 border border-red-600 rounded-lg font-bold py-2 px-4", type: "submit"
