--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -23,7 +23,27 @@
         %li
           %a{class: "font-caveat text-xl block py-2 px-4 hover:bg-stone-200 border-b-4 inline-block w-full hover:border-b-1 hover:border-red-600 rounded text-red-600 md:hover:bg-transparent md:hover:text-red-600 md:p-0", href: root_path} Головна
         %li
-          %a{class: "font-caveat text-xl block py-2 px-4 hover:bg-stone-200 border-b-4 inline-block w-full hover:border-b-1 hover:border-red-600 rounded text-red-600 md:hover:bg-transparent md:hover:text-red-600 md:p-0", href: "#services"} Послуги
+          -# Services dropdown
+          %button{id: "servicesDropdownButton", class: "font-caveat text-xl block py-2 px-4 hover:bg-stone-200 border-b-4 inline-block w-full hover:border-b-1 hover:border-red-600 rounded text-red-600 md:hover:bg-transparent md:hover:text-red-600 md:p-0", "data-dropdown-toggle": "servicesDropdownHover", "data-dropdown-trigger": "hover", type: "button"}
+            Послуги
+            %i{class: "fa-solid fa-angle-down"}
+          -# Dropdown menu
+          %div{id: "servicesDropdownHover", class: "z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44"}
+            %ul.py-2.text-sm.text-gray-700.dark:text-gray-200{"aria-labelledby" => "servicesDropdownButton"}
+              %li
+                %a{class: "font-caveat text-xl block py-2 px-4 hover:bg-stone-200 border-b-4 inline-block w-full hover:border-b-1 hover:border-red-600 rounded text-red-600 hover:bg-transparent hover:text-red-600 p-0", href: "#about"} Dashboard
+              %li
+                %a{class: "font-caveat text-xl block py-2 px-4 hover:bg-stone-200 border-b-4 inline-block w-full hover:border-b-1 hover:border-red-600 rounded text-red-600 hover:bg-transparent hover:text-red-600 p-0", href: "#about"} Dashboard
+              %li
+                %a{class: "font-caveat text-xl block py-2 px-4 hover:bg-stone-200 border-b-4 inline-block w-full hover:border-b-1 hover:border-red-600 rounded text-red-600 hover:bg-transparent hover:text-red-600 p-0", href: "#about"} Dashboard
+              %li
+                %a{class: "font-caveat text-xl block py-2 px-4 hover:bg-stone-200 border-b-4 inline-block w-full hover:border-b-1 hover:border-red-600 rounded text-red-600 hover:bg-transparent hover:text-red-600 p-0", href: "#about"} Dashboard
+              %li
+                %a{class: "font-caveat text-xl block py-2 px-4 hover:bg-stone-200 border-b-4 inline-block w-full hover:border-b-1 hover:border-red-600 rounded text-red-600 hover:bg-transparent hover:text-red-600 p-0", href: "#about"} Dashboard
+              %li
+                %a{class: "font-caveat text-xl block py-2 px-4 hover:bg-stone-200 border-b-4 inline-block w-full hover:border-b-1 hover:border-red-600 rounded text-red-600 hover:bg-transparent hover:text-red-600 p-0", href: "#about"} Dashboard                                                                
+        %li
+          %a{class: "font-caveat text-xl block py-2 px-4 hover:bg-stone-200 border-b-4 inline-block w-full hover:border-b-1 hover:border-red-600 rounded text-red-600 md:hover:bg-transparent md:hover:text-red-600 md:p-0", href: "#about"} Ціни
         %li
           %a{class: "font-caveat text-xl block py-2 px-4 hover:bg-stone-200 border-b-4 inline-block w-full hover:border-b-1 hover:border-red-600 rounded text-red-600 md:hover:bg-transparent md:hover:text-red-600 md:p-0", href: "#about"} Про нас
         %li
